# linux_apps_opensource

./: .gitignore  CMakeLists.txt  NEWS  README.md  build.sh  install
application/: CMakeLists.txt
application/3rd/: CMakeLists.txt
application/3rd/iniparser/: CMakeLists.txt
application/3rd/qdl/: CMakeLists.txt  patch.c  program.c
application/3rd/safestringlib/: CMakeLists.txt
application/dbus/introspection/: com.fibocom.helper.xml
application/fibo_config_service/: CMakeLists.txt  fbwwanConfig.ini  version.h.in
application/fibo_config_service/include/: cfg_log.h  config_helper.h  dynamic_config.h  fibo_cfg_log.h  fibo_config_helper.h  fibo_config_parse.h  fibo_dynamic_config.h  fibo_parse_xml.h  fibo_static_config.h  static_config.h
application/fibo_config_service/src/: cfg_log.c  config_helper.c  dynamic_config.c  fibo_config_helper.c  fibo_config_main.c  fibo_config_parse.c  fibo_dynamic_config.c  fibo_static_config.c  fibo_xml_parse.c  static_config.c
application/fibo_flash_service/: CMakeLists.txt  FwUpdate.ini  fibo_flash_main.c  fibo_flash_main.h  fibo_flash_parse_xml.c  version.h.in
application/fibo_helper_service/: CMakeLists.txt  fibo_helper_adapter.c  fibo_helper_adapter.h  fibo_helper_basic_func.c  fibo_helper_basic_func.h  fibo_helper_common.h  fibo_helper_log.c  fibo_helper_main.c  fibo_helper_mbim_analyzer.c  fibo_helper_mbim_main.c  fibo_helper_test.c  fibo_helper_test.h  version.h.in
application/fibo_helper_service/at_channel/: CMakeLists.txt  common.cc  common.h  serial_port.cc  serial_port.h
application/fibo_helper_service/at_mm/: CMakeLists.txt  common.cc  common.h  serial_port.cc  serial_port.h
application/fibo_ma_service/: LICENSE  fibo_ma
application/include/common/: fibo_helper_cid.h  fibo_list.h  fibo_log.h  fibo_private_log.h
data/: README.md
docs/: README.md
release/dpkg/DEBIAN/: control  postinst  postrm  preinst  prerm
release/dpkg/etc/dbus-1/system.d/: com.fibocom.helper.conf
release/dpkg/etc/systemd/system/: fibo_config.service  fibo_flash.service  fibo_helper.service  fibo_helper_mbim.service
release/dpkg/etc/systemd/system/fibo_helper.d/: port_inint.sh
release/dpkg/opt/fibocom/fibo_config_service/: README.md
release/dpkg/opt/fibocom/fibo_flash_service/: README.md
release/dpkg/opt/fibocom/fibo_helper_service/: README.md
release/dpkg/opt/fibocom/fibo_helper_service/fibo_helper_tools/: qdl
release/dpkg/usr/lib/x86_64-linux-gnu/ModemManager/fcc-unlock.d/: 2cb7
release/snap/: README.md
script/: postinst  postrm  preinst  prerm
scripts/: README.md
test/unit_test/: README.md
tools/: README.md
